# NewTeleBotFinal

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AFFILIATE_TESTS_COMPLETE_BANNER.txt  AFFILIATE_TESTS_COMPLETE_FULL_BUSINESS_LOGIC.md  ALEMBIC_MIGRATION_FIX_STRATEGY.md  ALL_TEST_RESULTS.csv  ALL_TEST_RESULTS_2025-11-14_18-54-21.csv  ALL_TEST_RESULTS_2025-11-14_19-18-37.csv  ALL_TEST_RESULTS_2025-11-14_21-23-22.csv  ANALYTICS_TEST_SUITE_CREATED.md  APPROVALS_ROUTE_POST_ENDPOINT_COMPLETE.md  APPROVAL_MODEL_FIELD_FIX_COMPLETE.md  ASYNC_FIXTURE_DECORATOR_FIX.md  ASYNC_FIXTURE_FIX_COMPLETE.md  ASYNC_FIXTURE_FIX_QUICK_REF.txt  ASYNC_FIXTURE_FIX_SUMMARY.md  ASYNC_HANDLING_FIX_SESSION_COMPLETE.md  AUDIT-COMPLETE-BANNER.txt  AUDIT_DOCUMENTATION_INDEX.md  AUDIT_PR_30_31_STATUS.md  AUDIT_SUMMARY_ALL_PRS.md  BASH_REGEX_FIX_TECHNICAL_DETAILS.md  BOTH_PR_051_052_100_PERCENT_COMPLETE.txt  BUSINESS_LOGIC_AUDIT_FINAL_SESSION.md  CHANGELOG.md  CI-CD-FIXES-BANNER.txt  CI-CD-KICKED-OFF-BANNER.txt  CICD_FIXES_QUICK_REFERENCE.md  CICD_FIXES_SESSION_COMPLETE.md  CICD_FIXTURE_FIX_COMPLETE.md  CICD_FIX_AND_REPUSH_COMPLETE.md  CICD_FIX_SESSION_COMPLETE.md  CICD_IMPORT_FIXES_COMPLETE.md  CICD_QUICK_REFERENCE.md  CICD_SESSION_2_FINAL_STATUS.md  CICD_SESSION_FINAL_SUMMARY.md  CI_CD_COMPREHENSIVE_REPORT_SETUP.md  CI_CD_DEPENDENCY_FIXES_SESSION_COMPLETE.md  (+1100 more)
.github/: copilot-instructions.md
backend/: .env.example  SLOW_TESTS.txt  __init__.py  alembic.ini  conftest.py  conftest.py.DISABLED_DUE_TO_CONFLICT_WITH_TESTS_CONFTEST  fix_all_users.py  fix_all_users_final.py  fix_test_social.py  pytest.ini  remove_username.py  requirements.txt  test_async_mock.py  test_constraint.py  test_decorator_debug.py  test_sec_settings.py  test_validator.py  test_validator2.py
base_files/: COMPLETE_BUILD_PLAN_ORDERED.md  COPILOT_INSTRUCTIONS_UPDATE_COMPLETE.md  ChatID.py  ContentDistribution copy.py  ContentDistribution.py  DemoNoStochRSI.py  Enterprise_System_Build_Plan.md  FRAMEWORK_UPDATED_224_PRS.md  FRAUD_PROOF_ARCHITECTURE.md  FRESH_START_COMPLETE.md  FULL_BUILD_TASK_BOARD.md  Final_Master_Prs.md  Fixed_Candlestick_Guide.docx  FlaskAPI.py  FlaskAPI1.py  GuideBot.py  INTEGRATION_COMPLETE.md  LEGACY_FEATURE_ANALYSIS.md  LIVEFXPROFinal4.py  LIVEFXPROFinal5 copy.py  LIVEFXPROFinal5.py  MASTER_UPDATE_SUMMARY.md  MarketingBot.py  NEW_PRS_TO_ADD.md  New_Master_Prs.md  PLATFORM_VISION_COMPLETE.md  PR-104-MASTER-SPECS.md  PROJECT_READY_FOR_IMPLEMENTATION.md  PROJECT_TRACKER.md  PR_IMPLEMENTATION_RULES.md  QUICK_REFERENCE_6_NEW_PRS.md  RSI-FIBONACCI-STRATEGY-SPECIFICATION.md  RateFetcher.py  RateFetcher1.py  TEST-ENVIRONMENT-SETUP.md  TRADE-JOURNAL-MARKETING-SYSTEM-SUMMARY.md  Telebot.py  Trading_Guide.docx  accid1.py  bot.py  (+1 more)
docker/: backend.Dockerfile
docs/: CLEANUP_PLAN.md  CONTRIBUTING.md  FINAL-SESSION-SUMMARY-PR3-PR4-COMPLETE.md  INDEX.md  MT5-IMPLEMENTATION-INDEX.md  MT5-INTEGRATION-IMPLEMENTATION-SUMMARY.md  MT5-QUICK-REFERENCE.md  PHASE_0_CICD_INDEX.md  PHASE_0_CICD_KNOWLEDGE_TRANSFER.md  PHASE_0_CICD_LESSONS_LEARNED.md  PHASE_5_PYTEST_FIXES_COMPLETE.md  PR-001-FINAL-REPORT.md  PR-001-STATUS-COMPLETE.md  PR-4-FINAL-SESSION-COMPLETE.md  PROJECT_CONSOLIDATION_SUMMARY.md  PR_033_034_035_IMPLEMENTATION_COMPLETE.md  PR_036_040_IMPLEMENTATION_COMPLETE.md  PR_041_045_IMPLEMENTATION_COMPLETE.md  PR_059_IMPLEMENTATION_COMPLETE.md  PR_SESSION_COMPLETE.md  PR_USER_RELATIONSHIP_ARCHITECTURE.md  SESSION_COMPLETE_FINAL.md  SESSION_DOCKER_BUILD_COMPLETE.md  SESSION_DOCKER_BUILD_FIX_SUMMARY.md  TODAY_WORK_SUMMARY.md  UNIVERSAL_TEMPLATE_v2.3.0_COMPLETE_SUMMARY.md  WORK_COMPLETION_REPORT.md
ea-sdk/: README.md
scripts/: analyze_results.py  analyze_test_output.py  backtest_fib_rsi.sh  bootstrap.sh  coverage-check.py  diagnose_db.py  generate_test_report.py  monitor_diagnostic.py  wait-for.sh  (+2 more)
(+1141 files in other folders)
