[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-signal-platform"
version = "0.1.0"
description = "Production trading signal platform with Telegram bot integration"
requires-python = ">=3.11"
authors = [
    {name = "Trading Signals Team", email = "dev@tradingsignals.local"},
]
license = "MIT"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.4.2",
    "pydantic-settings>=2.0.3",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    "httpx>=0.25.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyjwt>=2.8.1",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "cryptography>=41.0.7",
    "pyopenssl>=23.3.0",
    "orjson>=3.9.10",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "pytz>=2025.1.0",
    "stripe>=7.0.0",
    "python-telegram-bot>=20.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
backend = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-faulthandler>=2.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-json-report>=1.5.0",
    "fakeredis>=2.20.0",
    "black>=23.12.1",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "isort>=5.13.2",
    "pre-commit>=3.5.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.31.0",
    "types-pytz>=2025.1.0",
    "apscheduler>=3.10.0",
    "locust>=2.0.0",
]
# MetaTrader5 is Windows-only and not available on PyPI for Linux
# For CI/CD testing, we mock MT5 imports. For Windows production, install separately:
# pip install MetaTrader5>=5.0.38
windows = [
    "MetaTrader5>=5.0.38",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv/*", "venv/*"]
known_first_party = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "W191",   # indentation contains tabs
    "E401",   # multiple imports on one line (conflicts with isort)
    "C901",   # function too complex (allowed for decorators)
    "I001",   # isort (ruff and isort have conflicting rules, use isort)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B008"]
"*/routes.py" = ["B008", "B904"]  # FastAPI dependency injection and exception patterns
"*/service.py" = ["B904"]  # Service layer error handling
"*/idempotency.py" = ["B904"]  # Error handling patterns
"*/auth_bridge.py" = ["B904"]  # Error handling patterns
"*/webhook.py" = ["B008"]  # Webhook handlers use Depends in defaults

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["backend/tests"]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
addopts = "--strict-markers --tb=short"
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
